force-app/main/default/objects/Denials_MDCons_Provider_Grouping__mdt/Denials_MDCons_Provider_Grouping__mdt.object-meta.xml
<CustomObject>
    <label>Denials MDCons Provider Grouping</label>
    <pluralLabel>Denials MDCons Provider Groupings</pluralLabel>
</CustomObject>