force-app/main/default/objects/Denials_MDCons_Provider_Grouping__mdt/fields/Grouping__c.field-meta.xml
<CustomField>
    <fullName>Grouping__c</fullName>
    <label>Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cons</fullName>
                <default>true</default>
                <label>Cons</label>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>