force-app/main/default/objects/Denials_MDCons_Provider_Grouping__mdt/fields/Provider_ID_text__c.field-meta.xml
<CustomField>
    <fullName>Provider_ID_text__c</fullName>
    <label>Provider ID text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>